patch log